css + header stackable + formatting

--- a/imports/ui/main.css
+++ b/imports/ui/main.css
@@ -5,7 +5,6 @@ html, body {
 }
 .ui.menu{
   margin: 0;
-  height: 2rem;
 }
 
 .ui.circular.button {
@@ -32,9 +31,23 @@ transform: scale(1.1, 1.1);
 }
 
 .main{
-  background-image: linear-gradient(to bottom, #44dada, #c9fafa)
+  background-image: linear-gradient(to bottom, #44dada, #d3f7f7);
+  flex-grow: 2;
+  overflow-y: auto;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .ui.tabular.menu .active.item{
   background-color: #44dada;
+}
+
+.ui.secondary.menu{
+  height:1.5rem
+}
+
+.Title{
+  text-decoration: underline;
+  color: rgb(3, 45, 45);
+  text-transform: capitalize;
 }
