--- a/imports/ui/main.css
+++ b/imports/ui/main.css
@@ -47,7 +47,7 @@ transform: scale(1.1, 1.1);
 }
 
 .Title{
-  text-decoration: underline;
   color: rgb(3, 45, 45);
   text-transform: capitalize;
+  text-shadow: 2px 2px 2px white;
 }
